# iSwiftDriod

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  hello.swift  main.swift  run_djinni.sh  test.swift
android/: .gitignore
android/app/: build.gradle  proguard-rules.pro
android/app/src/androidTest/java/com/iswiftandroid/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/iswiftandroid/: MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/iswiftandroid/: ExampleUnitTest.java
djinni/: hello_world.djinni
generated-src/jni/: NativeHelloWorld.cpp  NativeHelloWorld.hpp
swift_src/: hello.swift
ubuntu/: Vagrantfile
